# RetroStation

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  Features.cmake  LICENSE  README.md  Taskfile.yml  vcpkg.json
.github/: config.yml  settings.yml
.github/workflows/: codeql.yml
.run/: Build (Debug).run.xml  Build Docs.run.xml  Test.run.xml  emulationstation.run.xml
data/emulationstation/: es_features.cfg  es_settings.cfg  es_systems.cfg
data/scripts/: batocera-timezone.sh
datainit/bios/: NstDatabase.xml  readme.txt
datainit/bios/mame2003-plus/: catver.ini
datainit/bios/mame2010/: mame2010.xml
datainit/decorations/: readme.txt
datainit/roms/3ds/: _info.txt
datainit/roms/abuse/: _info.txt
datainit/roms/adam/: _info.txt
datainit/roms/advision/: _info.txt
datainit/roms/amiga500/: _info.txt
datainit/roms/amigacd32/: _info.txt
datainit/roms/amigacdtv/: _info.txt
datainit/roms/apfm1000/: _info.txt
datainit/roms/apple2/: _info.txt
datainit/roms/apple2gs/: _info.txt
datainit/roms/arcadia/: _info.txt
datainit/roms/archimedes/: _info.txt
datainit/roms/arduboy/: _info.txt
datainit/roms/astrocde/: _info.txt
datainit/roms/atari2600/: _info.txt
datainit/roms/atom/: _info.txt
datainit/roms/bbc/: _info.txt
datainit/roms/c128/: _info.txt
datainit/roms/c20/: _info.txt
datainit/roms/c64/: _info.txt
datainit/roms/camplynx/: _info.txt
datainit/roms/cdi/: _info.txt
datainit/roms/channelf/: _info.txt
datainit/roms/coco/: _info.txt
datainit/roms/cplus4/: _info.txt
datainit/roms/crvision/: _info.txt
datainit/roms/daphne/: _info.txt
datainit/roms/devilutionx/: _info.txt
datainit/roms/dos/: _info.txt
datainit/roms/dreamcast/: _info.txt
datainit/roms/easyrpg/: _info.txt
datainit/roms/ecwolf/: _info.txt
datainit/roms/eduke32/: _info.txt
datainit/roms/electron/: _info.txt
datainit/roms/fbneo/: _info.txt
datainit/roms/flash/: _info.txt
datainit/roms/flatpak/: _info.txt
datainit/roms/fm7/: _info.txt
datainit/roms/fmtowns/: _info.txt
datainit/roms/fpinball/: _info.txt
datainit/roms/fury/: _info.txt
es-app/: CMakeLists.txt
es-app/src/: ApiSystem.cpp  CollectionSystemManager.cpp  CommandLineArguments.cpp  CommandLineArguments.h  CustomFeatures.cpp  EmulationStation.rc  FileData.cpp  FileFilterIndex.cpp  FileSorts.cpp  FileSorts.h  Gamelist.cpp  Genres.cpp  KeyboardMapping.cpp  LangParser.cpp  MetaData.cpp  MetaData.h  NetworkThread.cpp  RetroAchievements.cpp  SaveState.cpp  SaveState.h  SaveStateRepository.cpp  ScraperCmdLine.cpp  SystemData.cpp  SystemRandomPlaylist.cpp  SystemScreenSaver.cpp  ThreadedHasher.cpp  Win32ApiSystem.cpp  main.cpp
es-app/src/FileData/: CollectionFileData.cpp  CollectionFileData.h  FileData.cpp  FileData.h  FolderFileData.cpp  FolderFileData.h
es-app/src/components/: AsyncReqComponent.h  CarouselComponent.cpp  ScraperSearchComponent.cpp  TextListComponent.h
es-app/src/guis/: GuiAutoScrape.cpp  GuiBackup.cpp  GuiBluetoothForget.cpp  GuiBluetoothPair.cpp  GuiCollectionSystemsOptions.cpp  GuiGameAchievements.cpp  GuiGameOptions.cpp  GuiGameOptions.h  GuiGameScraper.cpp  GuiGamelistOptions.cpp  GuiGamelistOptions.h  GuiHashStart.cpp  GuiInstall.cpp  GuiMenu.cpp  GuiMetaDataEd.cpp  GuiNetPlay.cpp  GuiRetroAchievements.cpp  GuiSaveState.cpp  GuiScraperStart.cpp  GuiUpdate.cpp  GuiWifi.cpp
es-app/src/scrapers/: ArcadeDBJSONScraper.cpp  GamesDBJSONScraper.cpp  GamesDBJSONScraper.h  GamesDBJSONScraperResources.cpp  GamesDBJSONScraperResources.h  HfsDBScraper.cpp  HfsDBScraper.h  Scraper.cpp  Scraper.h  ScreenScraper.cpp  ScreenScraper.h  ThreadedScraper.cpp
es-app/src/scripting/: LuaScript.cpp  LuaScript.h
es-app/src/services/: HttpApi.cpp  HttpServerThread.cpp
es-app/src/views/: Binding.cpp  SystemView.cpp  UIModeController.cpp  ViewController.cpp  ViewController.h
es-app/src/views/gamelist/: BasicGameListView.cpp  BasicGameListView.h  CarouselGameListView.cpp  CarouselGameListView.h  DetailedContainer.cpp  DetailedGameListView.cpp  GameNameFormatter.cpp  GridGameListView.cpp  GridGameListView.h  IGameListView.h  ISimpleGameListView.cpp  ISimpleGameListView.h  VideoGameListView.cpp
es-app/test/: CMakeLists.txt  tests.cpp
es-core/: CMakeLists.txt
es-core/include/: core_version.h.in
es-core/src/: AudioManager.cpp  CECInput.cpp  Debug.cpp  Debug.h  GuiComponent.cpp  GunManager.cpp  HttpReq.cpp  HttpReq.h  ImageIO.cpp  InputConfig.cpp  InputManager.cpp  Log.cpp  Log.h  MameNames.cpp  Paths.cpp  Paths.h  Scripting.cpp  Settings.cpp  Sound.cpp  Splash.cpp  SystemConf.cpp  TextToSpeech.cpp  ThemeData.cpp  VolumeControl.cpp  Window.cpp  loguru_compile_fix.cpp  platform.cpp  platform.h
es-core/src/anim/: ThemeStoryboard.cpp
es-core/src/components/: AnimatedImageComponent.cpp  ControllerActivityComponent.cpp  DateTimeComponent.cpp  DateTimeComponent.h  DateTimeEditComponent.cpp  DateTimeEditComponent.h  HelpComponent.cpp  ImageComponent.cpp  ImageGridComponent.h  NinePatchComponent.cpp  OptionListComponent.h  TextComponent.cpp  WebImageComponent.cpp
es-core/src/guis/: GuiInputConfig.cpp  GuiTextEditPopupKeyboard.cpp
es-core/src/math/: Misc.cpp  Transform4x4f.cpp  Transform4x4f.h  Vector4f.h
es-core/src/renderers/: GlExtensions.cpp  Renderer.cpp  Renderer_GL21.cpp  Renderer_GLES10.cpp  Renderer_GLES20.cpp  Shader.cpp
es-core/src/resources/: Font.cpp  ResourceManager.cpp  TextureData.cpp  TextureDataManager.cpp  TextureResource.cpp
es-core/src/utils/: DateTime.cpp  DateTime.h  Duration.cpp  Duration.h  FileSystemUtil.cpp  FileSystemUtil.h  HtmlColor.cpp  HtmlColor.h  StringUtil.h  TimeUtil.cpp  TimeUtil.h  ZipFile.cpp
es-core/test/: CMakeLists.txt  Color_tests.cpp  Vector3f_tests.cpp  tests.cpp
es-core/test/math/: Transform4x4f_tests.cpp  Vector2f_tests.cpp  Vector2i_tests.cpp  Vector4f_tests.cpp
es-core/test/utils/: DateTime_tests.cpp
locale/: emulationstation2.pot
scripts/: batocera-audio.sh  batocera-padsinfo.sh  batocera-store.sh
(+206 files in other folders)
